[gd_scene load_steps=4 format=3 uid="uid://drvo2faq86u6r"]

[ext_resource type="Script" uid="uid://b8jre1tusa3na" path="res://rope.gd" id="1_0756u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0756u"]
size = Vector2(34, 1919.72)

[sub_resource type="CanvasTexture" id="CanvasTexture_0756u"]

[node name="Rope" type="Area2D"]
light_mask = 2
visibility_layer = 2
collision_layer = 4
collision_mask = 4
script = ExtResource("1_0756u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(2.5, 1000)
shape = SubResource("RectangleShape2D_0756u")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 2000)
texture = SubResource("CanvasTexture_0756u")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
